<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/add_user"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_user"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/view_user"
        android:layout_below="@id/add_user"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_user"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/delete_user"
        android:layout_below="@id/view_user"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete_user"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/update_user"
        android:layout_below="@id/delete_user"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_user"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>