<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/textView"-->
        <!--android:layout_marginTop="100dp"-->
        <!--android:hint="@string/user_id"-->
        <!--android:layout_marginStart="50dp"-->
        <!--android:layout_marginEnd="50dp"-->
        <!--android:ems="10"-->
        <!--android:id="@+id/user_id"/>-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/name"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:id="@+id/user_name"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:id="@+id/save"/>

</RelativeLayout>